# BaseML

./: CMakeLists.txt  main.cpp  nn_test.cpp
include/: BaseML.h  BaseMLUtils.h  BaseRL.h  CartPoleEnvironment.h  Environment.h  IEnvironment.h  PPO.h  PendulumEnvironment.h  RLAlgorithm.h  UtilsFunctions.h  UtilsGeneral.h  UtilsRandom.h  layer.h  matrix.h  neuralNetwork.h  utils.h
include/Core/: Layer.h  Matrix.h  NeuralNetwork.h
include/RL/: Environment.h  PPO.h  Player.h  RLAlgorithm.h
include/Utils/: UtilsFunctions.h  UtilsGeneral.h  UtilsRandom.h
src/: PPO.cpp  UtilsFunctions.cpp  UtilsGeneral.cpp  UtilsRandom.cpp  layer.cpp  matrix.cpp  neuralNetwork.cpp  utils.cpp
src/Core/: Layer.cpp  Matrix.cpp  NeuralNetwork.cpp
src/RL/: PPO.cpp  Player.cpp
src/Utils/: UtilsFunctions.cpp  UtilsGeneral.cpp  UtilsRandom.cpp
